# polyspace-report2excel

./: .gitignore  HTMLReader.py  README.md  RTFReader.py  export-all.py  exportcsv.py  exportxlsx.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pip.yml
src/p2e/: HTMLReader.py  RTFReader.py  __init__.py  exportcsv.py  exportxlsx.py  main.py  utils.py
test/: test_HTMLReader.py  test_xlsxexporter.py
tests/: test_csvexporter.py
